// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test form switch component render with custom color 1`] = `
<DocumentFragment>
  <span
    class="MuiSwitch-root makeStyles-switch-7 makeStyles-switch-8"
  >
    <span
      aria-disabled="false"
      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-9 MuiSwitch-switchBase MuiSwitch-colorSecondary"
      fill="#ff0000"
    >
      <span
        class="MuiIconButton-label"
      >
        <input
          class="PrivateSwitchBase-input-12 MuiSwitch-input"
          type="checkbox"
          value=""
        />
        <span
          class="MuiSwitch-thumb"
        />
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </span>
    <span
      class="MuiSwitch-track"
    />
  </span>
</DocumentFragment>
`;

exports[`test form switch component render with default colors 1`] = `
<DocumentFragment>
  <span
    class="MuiSwitch-root makeStyles-switch-1 makeStyles-switch-2"
  >
    <span
      aria-disabled="false"
      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-3 MuiSwitch-switchBase MuiSwitch-colorSecondary"
    >
      <span
        class="MuiIconButton-label"
      >
        <input
          class="PrivateSwitchBase-input-6 MuiSwitch-input"
          type="checkbox"
          value=""
        />
        <span
          class="MuiSwitch-thumb"
        />
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </span>
    <span
      class="MuiSwitch-track"
    />
  </span>
</DocumentFragment>
`;
